# LingXi

./: .gitattributes  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tatus  tsconfig.json
backend/: main.py  pyproject.toml
backend/api/: __init__.py  auth.py  chat.py  domains.py  feedback.py  knowledge.py  sessions.py  stats.py
backend/app/: __init__.py  auth.py  chat.py  health.py
backend/core/: __init__.py  config.py  domain_config.py  intent_classifier.py  llm_client.py
backend/data/: medical_knowledge.txt
backend/scripts/: build_index.py
docs/: langchain-async-sse-hang.md
prisma/: schema.prisma
scripts/: build.js  dev.js  rag_toolkit.bat  run.bat  start.js  start_services.bat
server/: main.py  pyproject.toml  test_llm.py
server/app/: __init__.py  chat.py
server/core/agent/: graph.py
server/core/data_sources/: __init__.py  base.py  cli.py  huatuo_adapter.py
server/core/data_sources/adapters/web/: base_spider.py
server/core/feedback/: collector.py
server/core/llm/: factory.py
server/core/memory/: profile.py
server/core/retrieval/: vector.py
server/core/safety/: guard.py
server/core/tools/: executor.py
server/domains/medical/: config.yaml
src/app/: globals.css  layout.tsx  page.tsx
src/core/: domain-config.ts
src/hooks/: use-presence.ts  use-sse-chat.ts
tests/: eval_data.py  eval_rag.py  eval_report.json
tools/: config.py  import_huatuo.py  importer.py  main.py
upload/: config.py  import_huatuo.py  importer.py  main.py  parser.py  pipelines.py  routes.py  spider.py
(+127 files in other folders)
